[gd_scene load_steps=60 format=2]

[ext_resource path="res://craftpix-net-753737-free-green-zone-tileset-pixel-art/1 Tiles/painel preto.png" type="Texture" id=1]
[ext_resource path="res://craftpix-net-753737-free-green-zone-tileset-pixel-art/1 Tiles/botaoazul (1).png" type="Texture" id=2]
[ext_resource path="res://Font/dogica.otf" type="DynamicFontData" id=3]
[ext_resource path="res://painelpreto.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=17]
Button/styles/focus = SubResource( 13 )
Button/styles/hover = SubResource( 14 )
Button/styles/normal = SubResource( 15 )
Button/styles/pressed = SubResource( 16 )

[sub_resource type="DynamicFont" id=18]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=23]
Button/styles/focus = SubResource( 19 )
Button/styles/hover = SubResource( 20 )
Button/styles/normal = SubResource( 21 )
Button/styles/pressed = SubResource( 22 )

[sub_resource type="DynamicFont" id=24]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=29]
Button/styles/focus = SubResource( 25 )
Button/styles/hover = SubResource( 26 )
Button/styles/normal = SubResource( 27 )
Button/styles/pressed = SubResource( 28 )

[sub_resource type="DynamicFont" id=30]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=35]
Button/styles/focus = SubResource( 31 )
Button/styles/hover = SubResource( 32 )
Button/styles/normal = SubResource( 33 )
Button/styles/pressed = SubResource( 34 )

[sub_resource type="DynamicFont" id=36]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=41]
Button/styles/focus = SubResource( 37 )
Button/styles/hover = SubResource( 38 )
Button/styles/normal = SubResource( 39 )
Button/styles/pressed = SubResource( 40 )

[sub_resource type="DynamicFont" id=42]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=11]
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 8 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=5]
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=43]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=44]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=45]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=47]
Button/styles/focus = SubResource( 43 )
Button/styles/hover = SubResource( 44 )
Button/styles/normal = SubResource( 45 )
Button/styles/pressed = SubResource( 46 )

[sub_resource type="DynamicFont" id=48]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=49]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=50]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=52]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=53]
Button/styles/focus = SubResource( 49 )
Button/styles/hover = SubResource( 50 )
Button/styles/normal = SubResource( 51 )
Button/styles/pressed = SubResource( 52 )

[sub_resource type="DynamicFont" id=54]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=55]
size = 170
font_data = ExtResource( 3 )

[node name="314dd8" type="Node2D"]
position = Vector2( 182, -44 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="PainelPreto" type="Sprite" parent="."]
position = Vector2( 437, 370 )
scale = Vector2( 0.803887, 0.886896 )
texture = ExtResource( 1 )

[node name="Botaoazul(1)" type="Sprite" parent="."]
position = Vector2( 328, 645 )
scale = Vector2( 0.776042, 0.825521 )
texture = ExtResource( 2 )

[node name="Botaoazul(1)2" type="Sprite" parent="."]
position = Vector2( 332, 530 )
scale = Vector2( 0.776042, 0.825521 )
texture = ExtResource( 2 )

[node name="Botaoazul(1)3" type="Sprite" parent="."]
position = Vector2( 333, 409 )
scale = Vector2( 0.776042, 0.825521 )
texture = ExtResource( 2 )

[node name="Botaoazul(1)4" type="Sprite" parent="."]
position = Vector2( 461, 526 )
scale = Vector2( 0.776042, 0.825521 )
texture = ExtResource( 2 )

[node name="Botaoazul(1)5" type="Sprite" parent="."]
position = Vector2( 461, 643 )
scale = Vector2( 0.776042, 0.825521 )
texture = ExtResource( 2 )

[node name="Botaoazul(1)6" type="Sprite" parent="."]
position = Vector2( 462, 408 )
scale = Vector2( 0.776042, 0.825521 )
texture = ExtResource( 2 )

[node name="Botaoazul(1)7" type="Sprite" parent="."]
position = Vector2( 588, 406 )
scale = Vector2( 0.776042, 0.825521 )
texture = ExtResource( 2 )

[node name="Botaoazul(1)8" type="Sprite" parent="."]
position = Vector2( -792, 316 )
scale = Vector2( 0.776042, 0.825521 )
texture = ExtResource( 2 )
offset = Vector2( 1775.68, 250.751 )

[node name="Button7" type="Button" parent="."]
margin_left = 273.0
margin_top = 355.0
margin_right = 338.0
margin_bottom = 408.0
theme = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 18 )
text = "7"

[node name="Botaoazul(1)9" type="Sprite" parent="."]
position = Vector2( 586, 645 )
scale = Vector2( 0.776042, 0.825521 )
texture = ExtResource( 2 )

[node name="Button4" type="Button" parent="."]
margin_left = 273.0
margin_top = 484.0
margin_right = 338.0
margin_bottom = 537.0
theme = SubResource( 23 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 24 )
text = "4"

[node name="Button5" type="Button" parent="."]
margin_left = 401.0
margin_top = 476.0
margin_right = 466.0
margin_bottom = 529.0
rect_pivot_offset = Vector2( -924, -108 )
theme = SubResource( 29 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 30 )
text = "5"

[node name="Button6" type="Button" parent="."]
margin_left = 530.0
margin_top = 473.0
margin_right = 595.0
margin_bottom = 526.0
theme = SubResource( 35 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 36 )
text = "6"

[node name="Button3" type="Button" parent="."]
margin_left = 525.0
margin_top = 596.0
margin_right = 590.0
margin_bottom = 649.0
theme = SubResource( 41 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 42 )
text = "3"

[node name="Button2" type="Button" parent="."]
margin_left = 401.0
margin_top = 593.0
margin_right = 466.0
margin_bottom = 646.0
theme = SubResource( 11 )
custom_colors/font_color_focus = Color( 0.960784, 0.941176, 0.027451, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 12 )
text = "2"

[node name="Button1" type="Button" parent="."]
margin_left = 267.0
margin_top = 595.0
margin_right = 332.0
margin_bottom = 648.0
theme = SubResource( 5 )
custom_colors/font_color_focus = Color( 0.952941, 0.854902, 0.0352941, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 6 )
text = "1"
icon_align = 1

[node name="Button9" type="Button" parent="."]
margin_left = 527.0
margin_top = 357.0
margin_right = 592.0
margin_bottom = 410.0
theme = SubResource( 47 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 48 )
text = "9"

[node name="Button8" type="Button" parent="."]
margin_left = 402.0
margin_top = 357.0
margin_right = 467.0
margin_bottom = 410.0
theme = SubResource( 53 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 54 )
text = "8"

[node name="Label" type="Label" parent="."]
margin_left = 240.0
margin_top = 80.0
margin_right = 637.0
margin_bottom = 270.0
custom_colors/font_color = Color( 0.701961, 0.027451, 0.027451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 55 )
align = 1
valign = 1

[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
